--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@ Can do really powerful stuff with it.</p>
   <aside class="gdbar right"><img src="images/google_developers_icon_128.png"></aside>
   <article class="flexbox vleft auto-fadein">
     <h2>Thank You!</h2>
-    <div style="margin-bottom:5em;"><a href="http://robdodson.me/polymer-building-blocks">robdodson.me/polymer-building-blocks</a></div>
+    <div style="margin-bottom:5em;"><a href="http://bit.ly/polymermdbru">bit.ly/polymermdbru</a></div>
   </article>
   <p class="auto-fadein" data-config-contact></p>
 </slide>
