--- a/elements/elements.html
+++ b/elements/elements.html
@@ -14,6 +14,7 @@
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/google-youtube/google-youtube.html">
 
 <link rel="import" href="my-element.html">
 <link rel="import" href="hello-element.html">
