Details and videos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://code.google.com/p/io-2012-slides
     <br>
   </div>
   <div>
-    <h3>Paper Elements</h3>
+    <h3>Material Design</h3>
     <br>
   </div>
   <div>
@@ -1665,7 +1665,7 @@ Can do really powerful stuff with it.</p>
       <h2>Introduction</h2>
       <h3></h3>
     </hgroup>
-    <article class="flexbox vcenter"><h3 style="line-height: 1.25;">To develop a single underlying system that allows for a unified experience across platforms and device sizes. Mobile precepts are fundamental, but touch, voice, mouse, and keyboard are all ﬁrst-class input methods.</h3>
+    <article class="flexbox vcenter"><h3 style="line-height: 1.25;">To develop a single underlying system that allows for a unified experience across platforms and device sizes. Mobile precepts are fundamental, but touch, voice, mouse, and keyboard are all first-class input methods.</h3>
 
 <p><img class="topmargin" src="images/polymer/md/intro2.png" style="width:100%"></p>
 <aside class="note">
@@ -1913,7 +1913,7 @@ Objects are presented to the user without breaking the continuity of experience 
       <h2><b>9. </b>Motion provides meaning</h2>
       <h3></h3>
     </hgroup>
-    <article class="flexbox vcenter"><h3 style="line-height: 1.25;">Motion is meaningful and appropriate, serving to focus attention and maintain continuity. Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.</h3>
+    <article class="flexbox vcenter"><h3 style="line-height: 1.25;">Motion is meaningful and appropriate, serving to focus attention and maintain continuity. Feedback is subtle yet clear. Transitions are efficient yet coherent.</h3>
 
 <p><img class="topmargin" src="images/polymer/md/pr9.png" style="width:100%"></p>
 <aside class="note">
@@ -2062,7 +2062,7 @@ Consistent Choreography: <b>Avoid linear spatial paths</b>.
       <h3></h3>
     </hgroup>
     <article class="flexbox vcenter"><h3 style="line-height: 1.25;">
-Color is inspired by <b>bold color</b> statements juxtaposed with <b>muted environments</b>, taking cues from contemporary architecture, road signs, pavement marking tape, and sports courts. Emphasize bold shadows and highlights. Introduce unexpected and vibrant colors. Use imagery that expresses personal <b>relevance</b>, information and delight.
+Color is inspired by <b>bold color</b> statements juxtaposed with <b>muted environments</b>, taking cues from contemporary architecture, road signs, pavement marking tape, and sports courts. Emphasize bold shadows and highlights. Introduce unexpected and vibrant colors.
 </h3>
 
 <p><img class="topmargin" src="images/polymer/md/colorstory.png" style="width:100%"></p>
@@ -2095,8 +2095,8 @@ Toolbars can be statically on top, 'waterfall'; be pushed, or covered.
 A floating action can <b>straddle</b> a step if it relates to the content of the paper creating that step.
 </h3>
 
-<p><img src="images/polymer/md/toolbar1.png" style="width:80%">
-<img src="images/polymer/md/floatingpoint.png" style="width:80%"></p>
+<p><img class="topmargin" src="images/polymer/md/floatingpoint.png" style="width:80%"></p>
+<p><img src="images/polymer/md/toolbar1.png" style="width:80%"></p>
 <aside class="note">
   <section>
     <p>
@@ -2115,14 +2115,10 @@ A floating action can <b>straddle</b> a step if it relates to the content of the
         
         
       </span>
-      <h2>Font</h2>
+      <h2>Roboto font</h2>
       <h3></h3>
     </hgroup>
-    <article class="flexbox vcenter"><h3 style="line-height: 1.25;">
-<b>Roboto</b>
-</h3>
-
-<p><img class="topmargin" src="images/polymer/md/font.png" style="width:100%"></p>
+    <article class="flexbox vcenter"><p><img src="images/polymer/md/font.png" style="width:100%"></p>
 <aside class="note">
   <section>
     <p>
